GRADLE-1009 Added documentation and samples